--- a/styles/css/home/vtex.flex-layout.css
+++ b/styles/css/home/vtex.flex-layout.css
@@ -1,3 +1,8 @@
 .flexRow--text {
     background-color: teal;
 }
+
+.flexRow--home__block-flex-layout {
+    margin: 0 auto;
+    max-width: 1024px;
+}
